--- a/package.json
+++ b/package.json
@@ -1,14 +1,43 @@
 {
   "name": "@authenticid-labs/zk-age-proof",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "zero knowledge age proofing on chain with realid.eth",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "types": "/lib/index.d.ts",
+  "files": [
+    "lib/**/*"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepare" : "npm run build",
+    "prepublishOnly" : "npm test && npm run lint",
+    "preversion" : "npm run lint",
+    "version" : "npm run format && git add -A src",
+    "postversion" : "git push && git push --tags",
+    "test": "jest --config jestconfig.json",
+    "build": "tsc",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "tslint -p tsconfig.json"
   },
   "author": "shawnmitchell.eth",
+  "keywords": ["realid", "ens", "zkp", "authenticid labs"],
   "license": "ISC",
   "dependencies": {
-    "ethers": "^5.5.3"
+    "ethers": "^5.5.3",
+    "text-encoding": "^0.7.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/AuthenticID-Labs/ZKAgeProof"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.12",
+    "@types/text-encoding": "^0.0.36",
+    "jest": "^27.4.7",
+    "prettier": "^2.5.1",
+    "ts-jest": "^27.1.3",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^4.5.5"
   }
 }
